# rse_intelligence

./: .gitignore  PRODUCT_ROADMAP.md  README.md  RSE_Master_Architecture.docx  RSE_Mobile_App_Businesses.docx  railway.json  railway.toml
.github/workflows/: ci.yml  deploy-staging.yml
agents/: README.md  git_commit.py  identities.py
agents/backend-ai-dev/: CLAUDE.md
backend/: .env  .env.example  db.py  requirements.txt  run_pipeline.py  scheduler.py
orchestrator/: .env.example  Dockerfile  RESUME_AUTOBUILD.md  SETUP.md  main.py  requirements.txt
products/financial-doc-analyzer/backend/: .env.example  Dockerfile  alembic.ini  analyzer.py  config.py  db.py  main.py  models.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  samples.py  storage.py
products/financial-doc-analyzer/backend/alembic/: env.py
products/financial-doc-analyzer/backend/alembic/versions/: fda_001_create_core_tables.py  fda_002_initial_schema.py
products/financial-doc-analyzer/backend/app/: analysis.py  auth.py  db.py  main.py  ocr.py
products/financial-doc-analyzer/backend/app/endpoints/: documents.py
products/financial-doc-analyzer/backend/migrations/: README.md  env.py
products/financial-doc-analyzer/backend/migrations/versions/: 0001_initial_schema.py
products/financial-doc-analyzer/backend/prompts/: analysis.py
products/financial-doc-analyzer/backend/static/: index.html
products/financial-doc-analyzer/backend/tests/: test_app.py  test_auth.py  test_documents.py  test_health.py  test_main.py  test_migration.py  test_pipeline.py
shared/ocr/: client.py
(+48 files in other folders)
